[package]
name = "synth-app"
version = "0.1.0"
authors = ["Paul Lavender-Jones <paul@lavender-jones.com>"]
license = "MIT"
edition = "2021"
publish = false


[dependencies]
embedded-graphics = "0.8.1"
embedded-layout = "0.4.1"
sfsm = { version = "0.4.3", features = ["trace"] }
cpal = "0.15.2"
anyhow = "1.0.44"
crossbeam = "0.8.0"
midir = "*"
read_input = "*"
wmidi = "4.0.10"

[dependencies.fundsp]
version = "0.16.0"
default-features = false

# Dependencies for Raspberry Pi target
[target.'cfg(target = "armv7-unknown-linux-gnueabihf")'.dependencies]

# Dependencies for other targets
[target.'cfg(not(target = "armv7-unknown-linux-gnueabihf"))'.dependencies]
embedded-graphics-simulator = "0.6.0"

[[bin]]
name = "dev"
test = false
bench = false