[package]
name = "synth-app"
version = "0.1.0"
authors = ["Paul Lavender-Jones <paul@lavender-jones.com>"]
license = "MIT"
edition = "2021"
publish = false


[dependencies]
embedded-graphics = "0.8.1"
cpal = "0.15.3"
anyhow = "1.0.86"
crossbeam = "0.8.0"
midir = "0.10.0"
read_input = "0.8.6"
wmidi = "4.0.10"
easer = "0.3.0"

[dependencies.fundsp]
version = "0.16.0"
default-features = false

# Dependencies for Raspberry Pi target
[target.'cfg(target = "armv7-unknown-linux-gnueabihf")'.dependencies]

# Dependencies for other targets
[target.'cfg(not(target = "armv7-unknown-linux-gnueabihf"))'.dependencies]
embedded-graphics-simulator = "0.6.0"

[[bin]]
name = "dev"
test = false
bench = false

[[bin]]
name = "minimal"
test = false
bench = false
