[package]
name = "synth-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy.git"
rev = "591c404"
features =["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]

[dependencies.embassy-futures]
git = "https://github.com/embassy-rs/embassy.git"
rev = "591c404"
features = ["defmt"]


[dependencies.embassy-rp]
git = "https://github.com/embassy-rs/embassy.git"
rev = "591c404"
features = ["defmt", "time-driver", "critical-section-impl"]

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy.git"
rev = "591c404"
features = ["defmt", "defmt-timestamp-uptime"]

[dependencies.embassy-usb]
git = "https://github.com/embassy-rs/embassy.git"
rev = "591c404"
features = ["defmt"]

[dependencies.wmidi]
version = "4.0.10"
default-features = false

[dependencies.panic-probe]
version = "0.3.1"
features = ["print-defmt"]

[[bin]]
name = "blinky"
test = false
bench = false

[[bin]]
name = "midi"
test = false
bench = false