[package]
name = "synth-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.6"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
adafruit-seesaw = "0.6.1"

embedded-hal = "1.0.0"
# embedded-hal-async = "1.0.0"
# embedded-io = "0.6.1"
# embedded-io-async = "0.6.1"
# embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.6.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
  "task-arena-size-1024",
] }
# embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-rp = { version = "0.2.0", features = [
  "defmt",
  "time-driver",
  "unstable-pac",
  "critical-section-impl",
] }
embassy-time = { version = "0.3.2", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embassy-sync = { version = "0.6.0" }

[[bin]]
name = "seesaw"
path = "src/bin/seesaw.rs"
bench = false
test = false

[[bin]]
name = "seesaw"
path = "src/bin/midi.rs"
bench = false
test = false


[[bin]]
name = "seesaw"
path = "src/bin/blinky.rs"
bench = false
test = false
