[package]
name = "synth-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
wmidi = { version = "4.0.10", default-features = false }
embedded-hal = "1.0.0"
embassy-executor = { version = "0.6.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-rp = { version = "0.2.0", features = [
  "defmt",
  "time-driver",
  "unstable-pac",
  "critical-section-impl",
] }
embassy-time = { version = "0.3.2", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embassy-sync = { version = "0.6.0" }
analog-multiplexer = "1.0.2"
assign-resources = "0.4.1"

[[bin]]
name = "main"
path = "src/main.rs"
test = false
doctest = false
bench = false

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# NOTE: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
